start script error

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "start" : "nodemon server.js",
+    "start" : "node server.js",
+    "start:dev": "nodemon fileName.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
