--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "start" : "node index.js",
+    "start": "node index.js",
     "start:dev": "nodemon fileName.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   }
 }
