--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "start": "node index.js",
+    "install": "cd client && npm install",
     "start:dev": "nodemon fileName.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
@@ -19,6 +20,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
