--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "install": "cd client && npm install",
     "start:dev": "nodemon fileName.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && cd client && npm run build -- prefix client"
   },
   "keywords": [],
   "author": "",
