--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "puppeteer": "^7.0.1",
+    "puppeteer-core": "^7.0.1",
+    "react-player": "^2.8.2"
   }
 }
