--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "client": "npm start --prefix client",
+    "client": "set PORT=3001&&npm start --prefix client",
     "start": "node index.js",
     "install": "cd client && npm install",
     "start:dev": "nodemon fileName.js",
